--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
     "@mui/system": "^6.0.2",
+    "@studio-freight/react-lenis": "^0.0.47",
     "bootstrap": "^5.3.3",
     "gsap": "^3.12.5",
     "prop-types": "^15.8.1",
@@ -25,7 +26,8 @@
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.1",
-    "react-scroll": "^1.9.0"
+    "react-scroll": "^1.9.0",
+    "react-scroll-parallax": "^3.4.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
