--- a/src/utils/projectdata.json
+++ b/src/utils/projectdata.json
@@ -11,14 +11,14 @@
       "description": "A MERN stack application for users to envision, plan and track group trips and their budgets collaboratively.",
       "link": "https://travel-buddy-e7hd.onrender.com/",
       "repo": "https://github.com/Crestone-Tech/travel-buddy",
-      "image": "travelbuddy"
+      "image": "greentrail"
     },
     {
       "name": "project 3 test",
       "description": "Full stack application for communities to market their services and offer responsible travelers the chance to travel like a local.",
       "link": "https://github.com",
       "repo": "https://github.com/adammathis05",
-      "image": "avatar"
+      "image": "greentrail"
     }
    
   ]
